# cmdstanpy

./: .appveyor.yml  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  arviz_scratch.ipynb  build_cmdstan.py  cleanup.sh  cmdstanpy_tutorial.ipynb  cmdstanpy_tutorial.py  config.json  make_cmdstan.sh  ppc_8schools  ppc_8schools.stan  pyproject.toml  requirements-optional.txt  requirements-test.txt  requirements.txt  rtd_change_default_version.py  scratch.ipynb  scratch.py  setup.py  sig_figs_test.py  test_gen_quantities.py  windows-install-notes.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cmdstanpy/: __init__.py  _version.py  cmds.py  cmdstan_args.py  compilation.py  compiler_opts.py  config.py  install_cmdstan.py  install_cxx_toolchain  install_cxx_toolchain.py  io.py  lib.py  model.py  progress.py  stanfit.py  tests.py  utils.py
dev/: make_cmdstan.sh
docs/: .buildinfo  Makefile  advi.rst  api.html  api.rst  changes.html  common_config.html  common_config.rst  community.html  conf.py  examples.html  generate_quantities.html  generate_quantities.rst  genindex.html  getting_started.html  getting_started.rst  guide.rst  hello_world.html  hello_world.rst  index.html  index.rst  installation.html  installation.rst  internal_api.html  make.bat  objects.inv  optimize.html  optimize.rst  overview.html  py-modindex.html  sample.html  sample.rst  search.html  searchindex.js  stan_models.html  under_the_hood.html  under_the_hood.rst  users-guide.html  variational_bayes.html  variational_bayes.rst  (+1 more)
docsrc/: Makefile  api.rst  changes.rst  common_config.rst  community.rst  conf.py  deeper_dive.rst  env.yml  examples.rst  generate_quantities.rst  hello_world.rst  index.rst  installation.rst  internal_api.rst  make.bat  optimize.rst  overview.rst  sample.rst  users-guide.rst  variational_bayes.rst  workflow.rst
oldstuff/: dryrun.py  tests.py
pycmdstan/: __init__.py  __main__.py  io.py  model.py  tests.py
scripts/: clean_examples.py
slurm/: run_chain.py  run_chains.sh
test/: __init__.py  conftest.py  example_script.py  test_cmds.py  test_cmdstan_args.py  test_compile.py  test_compiler_opts.py  test_compliance.py  test_config.py  test_cxx_installation.py  test_generate_quantities.py  test_init.py  test_install_cmdstan.py  test_laplace.py  test_log_prob.py  test_metadata.py  (+10 more)
(+297 files in other folders)
